# OOP

./: .gitignore  CMakeLists.txt
Lectures/: Lectures.sln
Lectures/Lecture_1/: Arrays.c  CStrings.c  Casting.cpp  Functions.cpp  HelloWorldC.c  Lecture_1.vcxproj  Pointers.c  StructExample.c
Lectures/Lecture_10/genes/: main.cpp
Lectures/Lecture_10/genes_custom_model/: GenesTableModel.cpp  PaginatedGenesTableModel.cpp
Lectures/Lecture_11/: Lecture_11.vcxproj  main.cpp
Lectures/Lecture_2/: Lecture_2.vcxproj  NullDanglingPointers.c  main.c
Lectures/Lecture_3/: Lecture_3.vcxproj  c_plus.cpp  vector_ex1.cpp  vector_ex2.cpp  vector_ex3.cpp
Lectures/Lecture_3/vector_v1/: Vector2D.cpp  Vector2D.h
Lectures/Lecture_3/vector_v2/: Vector2D.cpp  Vector2D.h
Lectures/Lecture_3/vector_v3/: Vector2D.cpp  Vector2D.h
Lectures/Lecture_3_v3/: Lecture_3_v3.vcxproj
Lectures/Lecture_4/: FunctionTemplate.cpp  Lecture_4.vcxproj  Lecture_4.vcxproj.filters  stl_demo.cpp
Lectures/Lecture_5/: Lecture_5.vcxproj  demo.cpp
Lectures/Lecture_6/: Lecture_6.vcxproj  demo_abstract_base_class.cpp  demo_polymorphism.cpp
Lectures/Lecture_6/polymorphism/: Dog.h  Penguin.h
Lectures/Lecture_6_abstract_base_class/: Animal.h  Lecture_6_abstract_base_class.vcxproj  demo.cpp
Lectures/Lecture_7_exceptions/: Lecture_7_exceptions.vcxproj  SpaceshipValidator.cpp  main.cpp
Lectures/Lecture_7_files/: main.cpp
Lectures/Lecture_7_streams/: Lecture_7_streams.vcxproj  main.cpp
Lectures/Lecture_8/hello_world/: main.cpp
