cmake_minimum_required(VERSION 3.17)
project(OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP
        Lectures/Lecture_1/Arrays.c
        Lectures/Lecture_1/Casting.cpp
        Lectures/Lecture_1/CStrings.c
        Lectures/Lecture_1/DataTypes.c
        Lectures/Lecture_1/Functions.cpp
        Lectures/Lecture_1/HelloWorld.cpp
        Lectures/Lecture_1/HelloWorldC.c
        Lectures/Lecture_1/Pointers.c
        Lectures/Lecture_1/ReadWrite.c
        Lectures/Lecture_1/Statements.c
        Lectures/Lecture_1/StructExample.c
        )
